[package]
name = "weather"
version = "0.1.0"
authors = ["Timofey <ouxya@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
futures = "0.3"
tokio = { version = "1.1", features = ["sync"] }
chrono = "0.4"
anyhow = "1.0"

# Use Rocket 0.5 with support for async I/O
[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
rev = "93e62c86eddf7cc9a7fc40b044182f83f0d7d92a"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
rev = "93e62c86eddf7cc9a7fc40b044182f83f0d7d92a"
default-features = false
features = ["json"]

# Performance stuff
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
